[tool.poetry]
name = "PowerBIScreenshot"
version = "1.0.0"
description = "Python Environment Power BI Screenshot - Flowbank"
authors = ["Adrien Riviere"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
selenium = "^4.18.1"
prefect = "^2.12.1"
boto3 = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies] # dev dependency group
flask = "^2.1.2"
black = "^22.3.0"
flake8 = "^5.0.4"
pre-commit = "^2.19.0"
isort = "^5.10.1"
pyupgrade = "^2.32.1"
autopep8 = "^1.7.0"
pep8-naming = "^0.12.1"
pylint = "^2.13.9"
